@@ -2,6 +2,7 @@
 
 * Reject attempts to insert into stdio via <+ (#288)
 * Support "Comparable" for Bud::Lattice values
+* Add support for lattices to rebl
 * Improve MRI 1.8 compatibility
 * Restore functionality of reading from stdio (i.e., stdin) with MRI 1.9
 * Require ruby_parser >= 3.1.0
